# free5gc-charging-portal

./: .dockerignore  Dockerfile  README.md  pyproject.toml
app/: chf.py  main.py  repository.py  settings.py
app/templates/: index.html  operator.html  user.html
tests/: test_identity.py  test_repository.py
